@@ -1,3 +1,9 @@
+2001-04-23  Adam Fedor  <fedor@gnu.org>
+
+	* Headers/gnustep/base/NSLock.h: Fix NeXT_RUNTIME typo.
+	* Headers/gnustep/base/objc-gnu2next.h: Change *_EXPORT to extern
+	* Source/o_vscanf.c: include objc-gnu2next.h
+
 2001-04-24   Nicola Pero  <n.pero@mi.flashnet.it>
 
 	* Testing/benchmark.m (bench_object): Use a choice of the 10 more
